Add house emoji to page title

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - Shopping On Tuesday{% endblock %}
+{% block title %}🏠Home - Shopping On Tuesday{% endblock %}
 
 {% block content %}
     <!-- Hero Section -->
