updated all the requested changes in issue

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,6 +45,7 @@
     <main>{% block content %} {% endblock %}</main>
 
     <!-- added scroll button -->
+     <!-- changed code to base.html -->
     <button
       class="scroll-button"
       id="scroll-button"
