Add emoji to products page title

--- a/app/templates/main/products.html
+++ b/app/templates/main/products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}All Products - Shopping On Tuesday{% endblock %}
+{% block title %}🛍️All Products - Shopping On Tuesday{% endblock %}
 
 {% block content %}
     <!-- Page Header -->
