Fixed endpoint url not found issue

--- a/app/templates/main/product_detail.html
+++ b/app/templates/main/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ product.name }} - Shopping On Tuesday{% endblock %}
+{% block title %}- Shopping On Tuesday{% endblock %}
 
 {% block content %}
     <!-- Breadcrumb Navigation -->
