link to new css file

--- a/app/templates/admin/product_list.html
+++ b/app/templates/admin/product_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}📦 All Products - Admin{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/product_list.css') }}">
+{% endblock %}
+
 {% block content %}
     <!-- Page Header -->
     <div class="admin-list-header">
